traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:13: error: not found: value diago
  if(y==0 && diago<getMondeLargeur()){setPos(diag+1,0);return diag+1}
             ^TraversalDiagonal:13: warning: enclosing method avance has result type Unit: return value discarded
  if(y==0 && diago<getMondeLargeur()){setPos(diag+1,0);return diag+1}
                                                       ^TraversalDiagonal:14: warning: enclosing method avance has result type Unit: return value discarded
  if(diag>=getMondeLargeur() && x+1==getMondeLargeur()){setPos(y,getMondeHauteur());return diag+1}
                                                                                    ^TraversalDiagonal:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return diag}
         ^TraversalDiagonal:16: warning: enclosing method avance has result type Unit: return value discarded
  return diag}
  ^TraversalDiagonal:25: error: type mismatch;
 found   : Unit
 required: Int
     diag=avance(diag)}while(!estPosiFin())
                ^